plugins {
    id 'com.android.library'
    id 'project-convention-spotbugs'
    id 'project-convention-logging'
}

android {
    compileSdk 34

    defaultConfig {
        minSdkVersion 19
        targetSdk 34

        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }

    publishing {
        singleVariant('release')
    }

    namespace = 'com.yubico.yubikit.android'
}

dependencies {
    api project(':core')

    compileOnly 'androidx.annotation:annotation:1.7.1'

    testImplementation project(':testing')
    testImplementation 'androidx.test.ext:junit:1.1.5'
    testImplementation 'org.robolectric:robolectric:4.11.1'
    testImplementation 'org.mockito:mockito-core:5.11.0'

    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
}

description = "This module is the core library implementation and provides functionality to detect a YubiKey plugged in or tapped over NFC and to open an ISO/IEC 7816 connection that allows sending raw APDU commands to the key."

apply from: project.file('publish.gradle')
